# SuperMarioBros-Nes-turbo

./: .gitignore  AGENTS.md  ARCHITECTURE.md  BENCHMARKS.md  CHANGES.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  GOVERNANCE.md  Makefile  NOTICE.md  README.md  SECURITY.md  SPECS.md  SUPPORT.md  dreamerv3_train.py  play.py  pyproject.toml  train.py  train_beam.py
.codex/optimization_campaigns/: current.json  ideas.md  rejected-synced-obs-broadcast-copy.patch  results.tsv
.codex/skills/autoresearch-speed/: SKILL.md  SPECS.md
.codex/skills/autoresearch-speed-improvements/: SKILL.md
.codex/skills/autoresearch-speed-improvements/agents/: openai.yaml
.codex/skills/autoresearch-speed/agents/: openai.yaml
.codex/skills/build-release/: SKILL.md
.codex/skills/build-release/agents/: openai.yaml
.codex/skills/build-release/scripts/: release_build.py
.codex/skills/host-benchmark/: SKILL.md
.codex/skills/host-benchmark/agents/: openai.yaml
.codex/skills/local-benchmark/: SKILL.md
.codex/skills/local-benchmark/agents/: openai.yaml
.codex/skills/modal-benchmark/: SKILL.md
.codex/skills/regenerate-mario-promo/: SKILL.md
.codex/skills/regenerate-mario-promo/agents/: openai.yaml
.codex/skills/regenerate-mario-promo/scripts/: regenerate.py
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release-wheels.yml  release.yml
ci/: smb-extension-dependencies.txt
crates/nes-turbo-nrom-core/: Cargo.toml
crates/nes-turbo-nrom-core/src/: cartridge.rs  lib.rs  machine.rs  profiler.rs
crates/nes-turbo-nrom-core/tests/: synthetic_driver.rs
crates/smb-turbo-driver/: Cargo.toml
crates/smb-turbo-driver/src/: lib.rs
docs/: PERFORMANCE_PLAN.md
image-assets/: manifest.json
image-assets/web-seo/: site.webmanifest
python/supermariobrosnes_fastenv/: __init__.py  env.py
python/supermariobrosnes_turbo/: __init__.py  action_tables.py  beam.py  beam_training.py  benchmark_rom.py  benchmark_sps.py  benchmark_workload.py  cli.py  env.py  go_explore.py  go_explore_training.py  gymrec_provider.py  import_cli.py  jerk.py  manual_playback.py  policy_playback.py  ppo.py  roms.py  state_playback.py  task_contract.py  training.py  training_campaign.py  training_ui.py
python/supermariobrosnes_turbo/data/SuperMarioBros-Nes-v0/: Level1-2.state  Level1-3.state  Level2-2.state  Level2-3.state  Level2-4.state  Level3-2.state  Level3-3.state  Level3-4.state  Level4-2.state  Level4-3.state  Level4-4.state  Level5-2.state  Level5-3.state  Level5-4.state  Level6-2.state  Level6-3.state  Level6-4.state  Level7-2.state  Level7-3.state  Level7-4.state  Level8-2.state  Level8-3.state  Level8-4.state  metadata.json
python/supermariobrosnes_turbo/import/: __init__.py  __main__.py
python/supermarioemu/: __init__.py  env.py
runs/level1-1-b55/: level_completion.jsonl
scripts/: __init__.py  autoresearch.py  benchmark_info_filter.py  benchmark_report.py  benchmark_rom.py  benchmark_sps.py  benchmark_stable_retro_turbo_pypi.py  benchmark_stats.py  benchmark_vec_env.py  benchmark_workload.py  capture_play_frame.py  check_sdist_internal_crates.py  check_smb_dependency_closure.py  check_vec_env_equivalence.py  compare_retro_vec_env.py  compare_supermariobrosnes_turbo_vec_env.py  dotenv_utils.py  finalize_host_benchmark.py  host_benchmark_stats.py  modal_benchmark_sps.py  modal_compare_sps.py  play.py  play_policy.py  release.py  run_git_ref_benchmark.py  run_git_ref_host_benchmark.py  run_pypi_stable_retro_turbo_benchmark.py  run_pypi_stable_retro_turbo_host_benchmark.py  run_pypi_supermariobrosnes_turbo_benchmark.py  run_pypi_supermariobrosnes_turbo_host_benchmark.py  smoke_smb.py  stable_retro_compat.py
src/: cartridge.rs  emulator.rs  lib.rs  profiler.rs  py_api.rs  vec_env.rs
tests/: fastpath_trace.rs  rom_helpers.py  test_action_modes.py  test_autoresearch.py  test_beam_train.py  test_benchmark_report.py  test_benchmark_sps.py  test_benchmark_stats.py  test_community_package.py  test_dotenv_utils.py  test_go_explore.py  test_grouped_synced_lanes.py  test_gymnasium_vector_env_contract.py  test_gymrec_provider.py  test_hf_policy_completion.py  test_host_benchmark_stats.py  test_level_policy_cli.py  test_noop_sticky_actions.py  test_play_policy_contract.py  test_release_build.py  test_repeated_state_lanes.py  test_research_infos.py  test_retro_vec_env_parity.py  test_rom_import.py  test_run_git_ref_benchmark.py  test_run_git_ref_host_benchmark.py  test_sb3_vec_env_contract.py  test_supermariobrosnes_turbo_vec_env_parity.py  test_train.py  test_training_campaign.py  test_training_runners.py  test_training_ui.py
wheelhouse-v0.1.1-linux/: supermariobrosnes_turbo-0.1.1-cp39-abi3-manylinux_2_17_x86_64.manylinux2014_x86_64.whl
wheelhouse-v0.1.1-macos/: supermariobrosnes_turbo-0.1.1-cp39-abi3-macosx_14_0_arm64.whl
