[package]
name = "supermariobrosnes-turbo"
version = "0.2.19"
edition = "2021"
license = "MIT"
publish = false

[lib]
name = "_supermariobrosnes_turbo"
crate-type = ["cdylib", "rlib"]

[dependencies]
numpy = "0.22"
pyo3 = { version = "0.22", features = ["abi3-py39", "extension-module"] }
rayon = "1"
sha2 = "0.10"
thiserror = "1"

[profile.release]
codegen-units = 1
lto = "fat"
opt-level = 2
panic = "abort"
strip = "symbols"
