[package]
name = "supermariobrosnes-turbo"
version = "0.4.1"
edition = "2021"
license = "MIT"
description = "High-throughput vectorized Super Mario Bros NES environment for reinforcement learning"
repository = "https://github.com/tsilva/SuperMarioBros-Nes-turbo"
homepage = "https://github.com/tsilva/SuperMarioBros-Nes-turbo"
readme = "README.md"
publish = false

[workspace]
members = [
    ".",
    "crates/nes-turbo-nrom-core",
    "crates/smb-turbo-driver",
]
resolver = "2"

[lib]
name = "_supermariobrosnes_turbo"
crate-type = ["cdylib", "rlib"]

[dependencies]
nes-turbo-nrom-core = { path = "crates/nes-turbo-nrom-core" }
smb-turbo-driver = { path = "crates/smb-turbo-driver" }
numpy = "0.22"
pyo3 = { version = "0.22", features = ["abi3-py39", "extension-module"] }
rayon = "1"

[dev-dependencies]
nes-turbo-nrom-core = { path = "crates/nes-turbo-nrom-core", features = ["test-support"] }

[profile.release]
codegen-units = 1
lto = "fat"
opt-level = 3
panic = "abort"
strip = "symbols"
