[build-system]
requires = ["maturin>=1.7,<2"]
build-backend = "maturin"

[project]
name = "supermariobrosnes-turbo"
version = "0.2.25"
description = "Blazing fast SuperMarioBros-Nes environment for Reinforcement Learning."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
dependencies = [
  "gymnasium>=0.29",
  "numpy>=1.26",
]

[project.optional-dependencies]
dev = [
  "huggingface-hub>=1.8.0",
  "maturin>=1.7,<2",
  "pytest>=8",
  "stable-retro-turbo==1.0.1.post29; python_version == '3.14'",
  "torch>=2.8.0",
]

[tool.maturin]
module-name = "supermariobrosnes_turbo._supermariobrosnes_turbo"
python-source = "python"
features = ["pyo3/extension-module"]
include = ["python/supermariobrosnes_turbo/data/**/*.state"]

[tool.uv]
exclude-newer = "7 days"
exclude-newer-package = { "stable-retro-turbo" = "2026-07-13T14:32:02Z" }
constraint-dependencies = [
  "mistralai!=2.4.6",
  "guardrails-ai!=0.10.1",
]

[tool.pytest.ini_options]
pythonpath = [".", "python"]
addopts = "--basetemp=.pytest-tmp -m 'not retro_oracle'"
markers = [
  "retro_oracle: manual acceptance tests that compare against stable-retro-turbo and require the local ROM",
]

[dependency-groups]
dev = [
    "cibuildwheel>=2.23.4,<4",
    "huggingface-hub>=1.8.0",
    "torch>=2.8.0",
    "twine>=6.2.0",
]
