[build-system]
requires = ["maturin>=1.9.3,<2"]
build-backend = "maturin"

[project]
name = "supermariobrosnes-turbo"
version = "0.3.0"
description = "Blazing fast SuperMarioBros-Nes environment for Reinforcement Learning."
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
license-files = ["LICENSE", "NOTICE.md"]
authors = [{ name = "Tiago Silva" }]
maintainers = [{ name = "Tiago Silva" }]
keywords = [
  "gymnasium",
  "nes",
  "reinforcement-learning",
  "rust",
  "super-mario-bros",
  "vector-environment",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Operating System :: MacOS",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: Rust",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  "gymnasium>=0.29",
  "numpy>=1.26",
]

[project.urls]
Homepage = "https://github.com/tsilva/SuperMarioBros-Nes-turbo"
Documentation = "https://github.com/tsilva/SuperMarioBros-Nes-turbo#readme"
Repository = "https://github.com/tsilva/SuperMarioBros-Nes-turbo.git"
Issues = "https://github.com/tsilva/SuperMarioBros-Nes-turbo/issues"
Changelog = "https://github.com/tsilva/SuperMarioBros-Nes-turbo/blob/main/CHANGES.md"

[project.optional-dependencies]
playback = [
  "huggingface-hub>=1.8.0",
]
oracle = [
  "stable-retro==1.0.1; python_version >= '3.10'",
]
test = [
  "pytest>=8",
]
dev = [
  "huggingface-hub>=1.8.0",
  "maturin>=1.9.3,<2",
  "pytest>=8",
  "stable-retro==1.0.1; python_version >= '3.10'",
]

[tool.maturin]
module-name = "supermariobrosnes_turbo._supermariobrosnes_turbo"
python-source = "python"
features = ["pyo3/extension-module"]
include = [
  "python/supermariobrosnes_turbo/data/**/*.state",
  "python/supermariobrosnes_turbo/py.typed",
]
exclude = ["python/supermariobrosnes_turbo/data/**/rom.nes"]

[tool.uv]
exclude-newer = "7 days"
constraint-dependencies = [
  "mistralai!=2.4.6",
  "guardrails-ai!=0.10.1",
]

[tool.pytest.ini_options]
pythonpath = [".", "python"]
addopts = "--basetemp=.pytest-tmp -m 'not retro_oracle'"
markers = [
  "retro_oracle: manual acceptance tests that compare against upstream stable-retro and require the local ROM",
]

[dependency-groups]
dev = [
    "cibuildwheel>=2.23.4,<4",
    "huggingface-hub>=1.8.0",
    "twine>=6.2.0",
]
release = [
    "cibuildwheel>=2.23.4,<4",
    "maturin>=1.9.3,<2",
    "twine>=6.2.0",
]
