[package]
name = "nes-turbo-nrom-core"
version = "0.3.1"
edition = "2021"
publish = false
license = "MIT"
repository = "https://github.com/tsilva/SuperMarioBros-Nes-turbo"
description = "Unpublished mapper-0 core for statically specialized NES turbo extensions"

[features]
test-support = []

[dependencies]
sha2 = "0.11"
thiserror = "2"
